# portfolio

./: .gitignore  CLAUDE.md  README.md
.github/: copilot-instructions.md
agentic_financial_news_scoring/: .dockerignore  Dockerfile  NEWS_SCORE_V1.yaml  README.md  api.py  config.yaml  main.py  news_domains.json  (+1 more)
economic_calendar_agent/: .env.example  Dockerfile  README.md  design.md  docker-compose.yml  doppler.json  pyproject.toml  usdjpy-analysis.txt
economic_calendar_agent/src/economic_calendar_agent/: agent_main.py  config.py
economic_calendar_agent/src/economic_calendar_agent/agent/: graph.py  orchestrator.py  state.py
economic_calendar_agent/src/economic_calendar_agent/agent/nodes/: economic.py  execution.py  risk.py  sentiment.py  synthesis.py  technical.py
economic_calendar_agent/src/economic_calendar_agent/correlation/: event_scorer.py  relevance_matrix.py  surprise_factor.py  time_decay.py
economic_calendar_agent/src/economic_calendar_agent/data/: fmp_client.py  fx_pair_map.py  redis_cache.py
economic_calendar_agent/src/economic_calendar_agent/models/: events.py  schemas.py
economic_calendar_agent/tests/: conftest.py
economic_calendar_agent/tests/e2e/: test_agent_graph.py
economic_calendar_agent/tests/unit/: test_event_scorer.py  test_fx_pair_map.py  test_relevance_matrix.py  test_surprise_factor.py  test_time_decay.py
tokyo-vc-agent-swarm/: .env.example  README.md  config.yaml  doppler.json  main.py  pyproject.toml
tokyo-vc-agent-swarm/src/tokyo_vc_swarm/: api.py  config.py  graph.py  pipeline.py  state.py
tokyo-vc-agent-swarm/src/tokyo_vc_swarm/agents/: __init__.py  base.py  japan_fit.py  market.py  product.py  risk.py  syndication.py  team.py  traction.py
tokyo-vc-agent-swarm/src/tokyo_vc_swarm/nodes/: __init__.py  formatter.py  initializer.py  ranker.py  scorer.py
tokyo-vc-agent-swarm/src/tokyo_vc_swarm/storage/: __init__.py  clickhouse.py
tokyo-vc-agent-swarm/tests/e2e/: test_api.py
tokyo-vc-agent-swarm/tests/integration/: test_pipeline.py
tokyo-vc-agent-swarm/tests/unit/: test_agents.py  test_formatter.py  test_ranker.py  test_state.py
(+176 files in other folders)
